<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".MainActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="369dp"
        android:layout_height="159dp"
        android:background="@drawable/rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.045">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="603dp"
            android:layout_height="153dp"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.375"
            app:srcCompat="@drawable/cryptocurrencytop"
            android:contentDescription="@string/todo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="369dp"
        android:layout_height="401dp"
        android:background="@drawable/rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        app:layout_constraintVertical_bias="0.48">

        <Button
            android:id="@+id/button_bitcoin"
            android:layout_width="346dp"
            android:layout_height="64dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/bitcoin"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.565"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_ethereum"
            android:layout_width="346dp"
            android:layout_height="64dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/rounded_button"
            android:clickable="true"
            android:text="@string/ethereum"
            android:textColor="#FCFCFC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.565"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_bitcoin"
            android:focusable="true" />

        <Button
            android:id="@+id/button_ripple"
            android:layout_width="346dp"
            android:layout_height="64dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/rounded_button"
            android:clickable="true"
            android:text="@string/ripple"
            android:textColor="#F7F4F4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.565"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_ethereum"
            android:focusable="true" />

        <Button
            android:id="@+id/button_stellar"
            android:layout_width="346dp"
            android:layout_height="64dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/rounded_button"
            android:clickable="true"
            android:text="@string/stellar"
            android:textColor="#FAFAFAFA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.565"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_ripple"
            android:focusable="true" />

        <Button
            android:id="@+id/button_stable_coin"
            android:layout_width="346dp"
            android:layout_height="64dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/rounded_button"
            android:clickable="true"
            android:text="@string/stable_coin"
            android:textColor="#FCFCFC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_stellar"
            app:layout_constraintVertical_bias="0.6"
            android:focusable="true" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>